# modern-software-dev-assignments

./: .gitignore
notes/: how_mcp_works.md  note.md  week1_summary.md  week2_summary.md  week3_summary.md  week4_gemini_plan.md  week4_summary.md  week5_summary.md
week1/: chain_of_thought.py  k_shot_prompting.py  rag.py  reflexion.py  self_consistency_prompting.py  tool_calling.py
week2/: README.md  writeup.md
week2/app/: schemas.py
week2/app/routers/: action_items.py  notes.py
week2/app/services/: extract.py
week2/frontend/: index.html
week2/tests/: test_extract.py
week3/: README.md  pyproject.toml
week3/server/: main.py
week3/server/tools/: hn.py  kalshi.py
week4/: writeup.md
week4/backend/tests/: test_notes.py
week4/frontend/: app.js  index.html
week5/: Makefile  plan.md  vercel.json  writeup.md
week5/backend/app/: models.py  schemas.py
week5/backend/app/routers/: action_items.py  notes.py
week5/backend/app/services/: extract.py
week5/backend/tests/: test_action_items.py  test_extract.py  test_notes.py
week5/docs/: API.md
week5/frontend/: app.js  index.html
week5/frontend-react/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
week5/frontend-react/src/: App.jsx  index.css
week5/scripts/: sync_docs.py  test_runner.py
